Image related bug fixes

--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -77,7 +77,7 @@
                         </div>
                         <div>
                             <img ng-src="{{bottomCoverImage}}" src="http://placehold.it/393x220"
-                                 class="img-responsive thumbnail"/>
+                                 class="img-responsive thumbnail" style="min-height: 216px;"/>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
                     <div class="col-md-3 top-margin">
                         <div class="user-image biothumb" ng-controller="ProfileImageCrop">
                             <img ng-src="{{profileImage}}" src="http://placehold.it/300x200"
-                                 class="img-responsive thumbnail"/>
+                                 class="img-responsive thumbnail" style="min-height: 200px;"/>
 
                             <div class="overlay fileUpload" ng-if="userId == loggedInUserId">
                                 <ul class="list-unstyled text-center">
