--- a/public/app/partials/evezplace/browse/store/place-order.html
+++ b/public/app/partials/evezplace/browse/store/place-order.html
@@ -61,7 +61,7 @@
                                 <div class="col-sm-4 col-md-4 col-lg-4 vcenter">
                                     {{orderItem.title}}
                                 </div>
-                                <div class="col-sm-2 col-md-2 col-lg-2 vcenter">&#x20b9;
+                                <div class="col-sm-2 col-md-2 col-lg-2 vcenter">
                                     {{orderItem.price}}
                                 </div>
                                 <div class="col-sm-4 col-md-4 col-lg-4 vcenter">
