pop-up color picker for product catalogue

--- a/public/app/app.css
+++ b/public/app/app.css
@@ -1,5 +1,4 @@
 /* Font Awesome style start */
-
 #bottom-nav .fa {
     color: #e50880;
 }
@@ -472,6 +471,12 @@ input[type=number]::-webkit-outer-spin-button {
 {
     float: left;
     margin: 0px 15px 0px 0px;
+}
+
+/*product catalogue color picker*/
+.colorpicker.dropdown
+{
+    z-index:99999;
 }
 
 /*Spinner Style*/
