--- a/public/app/partials/chat/chat-form.html
+++ b/public/app/partials/chat/chat-form.html
@@ -1,3 +1,7 @@
+
+<!--chat -->
+<link rel="stylesheet" href="custom/OneOnOneChat/css/chat.css"/>
+
 <!--
 | CHAT HEADER SECTION
 -->
@@ -94,6 +98,12 @@
       </div>
   </div>
 </div>
+
+<!--chat -->
+<script type="text/javascript" src="custom/OneOnOneChat/js/jquery.slimscroll.js"></script>
+<script type="text/javascript" src="custom/OneOnOneChat/js/main.js"></script>
+<script type="text/javascript" src="custom/OneOnOneChat/js/chatigniter.js"></script>
+
 
 <script type="text/javascript">
 
