--- a/public/app/partials/Community/invitefriends.html
+++ b/public/app/partials/Community/invitefriends.html
@@ -108,7 +108,7 @@
                                                    placeholder="Search by firstname" autofocus class="form-control">
                                         </form>
                                         <div class="col-md-2">
-                                          <button class="btn btn-primary btn-sm"  ng-click="sendGmailInvites()">Invite</button>
+                                          <button class="btn btn-primary btn-sm"  ng-click="sendGmailInvite()">Invite</button>
                                         </div>                  
                                         <button type="button" class="close" ng-click="resetGooglePlus()"
                                                 aria-label="Close"><span aria-hidden="true">×</span></button>
