--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -65,12 +65,12 @@
                           <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                         </span> Cart ({{shoppingCartCount}})
                         </a>
-                         </div>
+                    </div>
 
                     <div class="col-md-4" style="margin-top: 5px">
                         <a href="javascript:void(0)" ng-if="loggedIn" id="top-chat-button" class="btn-chat" >
-                            <i class="fa fa-weixin" style="font-size: 28px;color: blueviolet;">
-                                <span class="span-top-value label label-danger" style="font-size: 10px;"></span>
+                            <i class="fa fa-weixin" style="font-size: 28px;">
+                                <span class="span-top-value label label-danger" style="font-size: 10px;background-color:crimson;"></span>
                             </i>
                         </a>
                     </div>
