--- a/public/app/custom/OneOnOneChat/css/chat.css
+++ b/public/app/custom/OneOnOneChat/css/chat.css
@@ -9,7 +9,7 @@
 
 /* Header */
 
-.header {
+/*.header {
     display: table;
     position: relative;
     width: 100%;
@@ -19,7 +19,7 @@
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-}
+}*/
 
 .contact-wrap{
     position: relative;
