--- a/public/app/partials/profile/details/enhance.html
+++ b/public/app/partials/profile/details/enhance.html
@@ -215,7 +215,7 @@
             <div class="col-xs-12 form-group">
                 <div class="fileUpload btn btn-primary">
                     <span><i class="fa fa-cloud-upload"></i>Any special uploads you want to show case </span>
-                    <input type="file" class="upload" name="image" nv-file-select="" uploader="uploader"
+                    <input type="file" class="upload" name="image" nv-file-select="" uploader="uploader4"
                            multiple/>
                 </div>
             </div>
