--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -31,7 +31,7 @@
                             <ul class="dropdown-menu" role="menu">
                                 <li><a href="#profile/{{userId}}">Manage Mysite</a></li>
                                 <li><a href="#profile/{{userId}}/personalinfo">Update Profile</a></li>
-                                <li ng-if="roleId == 1"><a href="#admin">Admin</a></li>
+                                <li ng-if="roleId == 1"><a href="#admin">Editor</a></li>
                                 <li><a>Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a href ng-click="Logout()">Logout</a></li>
