Description box in all pages
Description box in all pages

--- a/public/app/partials/Community/invitehistory.html
+++ b/public/app/partials/Community/invitehistory.html
@@ -71,6 +71,15 @@
     </div>
 </div>
 <div class="col-md-10 user-menu user-pad" ng-controller="inviteHistory">
+	<div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="fragment">
+            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Invite History</h4>
+            <p>
+                TODO
+            </p>
+        </div>
+    </div>
     <div class="col-md-12 panel-heading" style="padding-left: 0px">
         <div class="col-md-2" style="padding-left: 0px">
             <h4>
