--- a/public/app/partials/admin/Manage/commerce_engine.html
+++ b/public/app/partials/admin/Manage/commerce_engine.html
@@ -32,7 +32,7 @@
                             <h5 style="font-weight: 600">Do you need Payment Gateway?</h5>
                             <h5 style="font-weight: 600">Transaction Fee</h5>
                             <p>Credit Card Transaction : 2.9%</br>
-                               Debit Card Transactoion : 2.9%</br>
+                               Debit Card Transaction : 2.9%</br>
                                Net Banking Transaction : 2.9%</p>
                                
                           <!--   <p>(2.9% of the transaction fee would
@@ -138,9 +138,9 @@
                                 Information</h5>
                         </div>
                         <div class="col-md-5">
-                            <input type="text" placeholder="Contact Number" class="form-control"
-                                      id="contactNumber" name="contactNumber"
-                                      ng-model="storeCommerce.contactNumber"/>
+                            <input type="number" placeholder="Please enter 10 digits Phone Number" class="form-control"
+                                   id="contactNumber" name="contactNumber"
+                                   ng-model="storeCommerce.contactNumber"/>
                         </div>
                     </div>
                 </div>
