--- a/public/app/partials/Community/advertise.html
+++ b/public/app/partials/Community/advertise.html
@@ -72,6 +72,15 @@
 </div>
 <div class="col-md-10 user-menu user-pad">
     <div class="row" ng-controller="inviteFriendsCtrl">
+    <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="fragment">
+            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Advertise</h4>
+            <p>
+                TODO
+            </p>
+        </div>
+    </div>
     <div class="col-md-12 invite-section">
         <div class="panel panel-default" style="margin-top:30px;">
             <div class="panel-body text-left">
