--- a/public/app/partials/profile/details/other.html
+++ b/public/app/partials/profile/details/other.html
@@ -158,6 +158,15 @@
         </div>
 
         <div class="col-md-10 user-menu user-pad" ng-controller="profileDetailsCtrl">
+        <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+			        <div class="fragment">
+			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Other EvezOwn services</h4>
+			            <p>
+			                TODO
+			            </p>
+			        </div>
+			    </div>
             <h3>
                 Other EvezOwn services
             </h3>
