--- a/public/app/partials/profile/home.html
+++ b/public/app/partials/profile/home.html
@@ -172,7 +172,15 @@
                 <h3 style="font-size: 1.5em">
                     Recent activity
                 </h3>
-
+				<div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+			        <div class="fragment">
+			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Recent activity</h4>
+			            <p>
+			                TODO
+			            </p>
+			        </div>
+			    </div>
 
                 <div class="col-md-12 trending-section" ng-repeat="post in myposts ">
                     <div class="col-md-12 zero-padding-left-right">
