--- a/public/app/partials/profile/mydiscussion.html
+++ b/public/app/partials/profile/mydiscussion.html
@@ -135,6 +135,15 @@
             
         </div>
 <div class="col-md-10 user-menu user-pad"  ng-controller="forums">
+	  <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+        <div class="fragment">
+            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Discussion</h4>
+            <p>
+                TODO
+            </p>
+        </div>
+    </div>
     <div class="col-md-12 panel-heading no-padding">
         <div class="col-md-2 no-padding">
             <h4>
