--- a/public/app/partials/profile/mylisting.html
+++ b/public/app/partials/profile/mylisting.html
@@ -136,9 +136,15 @@
             
         </div>
         <div class="col-md-10 user-menu user-pad">
-            <div class="col-md-12 panel-heading">
-
-            </div>
+            <div class="col-md-12 panel-heading" style="padding-left: 0px;padding-right: 0px;">
+			        <div class="fragment">
+			            <a><span id='close' onclick='this.parentNode.parentNode.parentNode.removeChild(this.parentNode.parentNode); return false;'>x</span></a>
+			            <h4 style="color: #369;font-family:'Raleway', sans-serif;font-size:18px;font-weight:500;">Ads & Campaigns</h4>
+			            <p>
+			                TODO
+			            </p>
+			        </div>
+			    </div>
             <div class="col-md-12">
                 <div class="row" style="margin-bottom: 40px">
                     <div class="col-md-12 user-menu user-pad" ng-controller="classifiedProfileCtrl">
