social login and group fixes

--- a/public/app/partials/Community/group-details.html
+++ b/public/app/partials/Community/group-details.html
@@ -199,7 +199,7 @@
                         </div>
                         <div class="col-sm-3" style="padding-left: 0px; padding-right: 0px">
                             <a href ng-click="AddFriendsToGroup(member.friend_user_id,selectedGroup.id)"
-                               class="btn btn-link btn-sm"><span class="fa fa-check"></span> Invite</a>
+                               class="btn btn-link btn-sm"><span class="fa fa-check"></span> Add</a>
                         </div>
                     </li>
                 </ul>
