--- a/public/app/partials/profile/mygroup.html
+++ b/public/app/partials/profile/mygroup.html
@@ -177,8 +177,8 @@
                             <span>Members <strong>{{group.members.length}}</strong> | </span>
                             <span>Created by <strong>{{group.group_owner.firstname}} {{group.group_owner.lastname}}</strong> | </span>
                             <span ng-if="loggedInUserId == group.group_owner.user_id"><a href ng-click="DeleteGroup(group)" class="topic-link">Delete</a>|</span>
-                            <span ng-if="loggedInUserId != group.group_owner.user_id"><a href ng-click="JoinGroup(group)" class="topic-link">Join</a></span>
-                        </p>
+<!--                             <span ng-if="loggedInUserId != group.group_owner.user_id"><a href ng-click="JoinGroup(group)" class="topic-link">Join</a></span>
+ -->                        </p>
                     </div>
                 </div>
             </div>
