--- a/public/app/partials/home/login.html
+++ b/public/app/partials/home/login.html
@@ -25,6 +25,17 @@
                             </div>
                         </div>
                     </form>
+                    <div align="center">
+                        <a class="btn btn-sm btn-social btn-google-plus" ng-click="authenticate('google')">
+                            <span class="fa fa-google"></span> Sign in with Google
+                        </a>
+                        <a class="btn btn-sm btn-social btn-facebook" ng-click="authenticate('facebook')">
+                            <span class="fa fa-facebook"></span> Sign in with Facebook
+                        </a>
+                        <a class="btn btn-sm btn-social btn-linkedin" ng-click="authenticate('linkedin')">
+                            <span class="fa fa-linkedin"></span> Sign in with LinkedIn
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
