Bulk invite enabled for all users

--- a/public/app/partials/Community/invitefriends.html
+++ b/public/app/partials/Community/invitefriends.html
@@ -169,7 +169,7 @@
                             <button class="btn btn-primary pull-right" style="margin-top: 10px" ng-click="sendInvite(emails)">Send Invites</button><br><br>
                         </div>
                         <!--invite by uploading excel-->
-                        <div class="panel panel-plain" id="ExcelPart">
+                        <div class="panel panel-plain">
                             <h4>Upload XLSX/XLS files</h4>
                             <i>Your XLSX file should contain field named "EMAIL"</i>
                             <select name="format" hidden>
