--- a/public/app/partials/home/login.html
+++ b/public/app/partials/home/login.html
@@ -2,7 +2,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-8 col-md-8 col-lg-offset-2 col-md-offset-2">
                 <h1 class=" login-title">{{title}}</h1>
-                <div class="form-wall">
+                <div class="col-md-12 form-wall">
                     <form class="form-invite"
                           ng-submit="login(credentials)">
                         <input type="email" class="form-control" ng-model="credentials.email"  placeholder="Email" required autofocus>
