mysite & manage mysite link will load myprofile

--- a/public/app/partials/top-menu.html
+++ b/public/app/partials/top-menu.html
@@ -14,7 +14,7 @@
             <div id="top-nav" class="top-nav">
                 <div class="row">
                     <ul class="nav navbar-nav">
-                        <li ng-class="{ active: isActive('/profile/{{userId}}')}"><a href="#profile/{{userId}}">Mysite</a></li>
+                        <li ng-class="{ active: isActive('/profile/{{userId}}')}"><a href="#profile/myprofile/{{userId}}">Mysite</a></li>
                         <li ng-class="{ active: isActive('/evezplace')}"><a href="#evezplace">MarketPlace</a></li>
                         <li ng-class="{ active: isActive('/wopportunity')}"><a href="#wopportunity">Jobs</a>
                         </li>
@@ -29,7 +29,7 @@
                                 <span class="caret"></span>
                             </a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="#profile/{{userId}}">Manage Mysite</a></li>
+                                <li><a href="#profile/myprofile/{{userId}}">Manage Mysite</a></li>
                                 <li><a href="#profile/{{userId}}/personalinfo">Update Profile</a></li>
                                 <li ng-if="roleId == 1"><a href="#admin">Editor</a></li>
                                 <li><a>Settings</a></li>
